[tool.poetry]
name = "enigma"
version = "0.1.0"
description = "Grimoirelab: Manages credentials"
authors = ["Alberto Ferrer Sánchez <alberefe@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
